--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,4 @@ jobs:
         java-version: 11
         distribution: 'adopt'
     - name: Compile and run tests
-      run: sbt ";clean ;test"
+      run: sbt ";clean ;test; coverageReport"
